# LJMB

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  job_bck.sh
Morse/: CMakeLists.txt  ReadMe.md
Morse/data/: Leonardo.sh  Makefile  Timer.plt  Timer.py  argon_108.inp  argon_108.xyz  argon_2916.inp  argon_78732.inp
Morse/inc/: cleanup.h  init.h  structs.h  utils.h
Morse/src/: comp.c  init.c  structs.c
data/: 2223013_1_2.out  2223015_1_8.out  2223016_1_16.out  2223022_2_8.out  2223030_4_16.out  2223031_4_32.out  2223032_8_1.out  2223033_8_2.out  2223038_8_32.out  2223040_16_2.out  2223042_16_8.out  2223046_32_1.out  2223047_32_2.out  2223049_32_8.out  2223050_32_16.out  2223051_32_32.out  2223052_1_1.out  2223055_1_8.out  2223056_1_16.out  2223057_1_32.out  2223060_2_4.out  2223062_2_16.out  2223064_4_1.out  2223066_4_4.out  2223067_4_8.out  2223069_4_32.out  2223072_8_4.out  2223076_16_1.out  2223082_32_1.out  2223083_32_2.out  2223086_32_16.out  2223088_1_1.out  2223090_1_4.out  2223091_1_8.out  2223092_1_16.out  2223093_1_32.out  2223094_2_1.out  2223095_2_2.out  2223098_2_16.out  2223099_2_32.out  (+50 more)
data/Timer/.new/MPI/: 2250722_01_02_01.out  2250731_01_08_01.out  2250736_01_32_01.out  2250737_02_01_01.out  2250743_02_02_01.out  2250748_02_04_01.out  2250755_02_16_01.out  2250757_02_32_01.out  2250758_04_01_01.out  2250764_04_02_01.out  2250769_04_04_01.out  2250773_04_08_01.out  2250778_04_32_01.out  2250794_08_08_01.out  2250797_08_16_01.out  2250799_08_32_01.out  2250806_01_02_01.out  2250818_01_16_01.out  2250820_01_32_01.out  2250821_02_01_01.out  2250827_02_02_01.out  2250836_02_08_01.out  2250842_04_01_01.out  2250848_04_02_01.out  2250853_04_04_01.out  2250857_04_08_01.out  2250862_04_32_01.out  2250863_08_01_01.out  2250874_08_04_01.out  2250881_08_16_01.out  2250895_01_04_01.out  2250899_01_08_01.out  2250902_01_16_01.out  2250916_02_04_01.out  2250932_04_02_01.out  2250937_04_04_01.out  2250944_04_16_01.out  2250946_04_32_01.out  2250947_08_01_01.out  2250965_08_16_01.out  (+1 more)
data/Timer/.new/MPI_OpenMP/: 2250724_01_02_04.out  2250725_01_02_08.out  2250729_01_04_04.out  2250730_01_04_08.out  2250732_01_08_02.out  2250740_02_01_08.out  2250742_02_01_32.out  2250746_02_02_08.out  2250747_02_02_16.out  2250749_02_04_02.out  2250750_02_04_04.out  2250759_04_01_02.out  2250761_04_01_08.out  2250766_04_02_04.out  2250767_04_02_08.out  2250770_04_04_02.out  2250771_04_04_04.out  2250774_04_08_02.out  2250777_04_16_02.out  (+66 more)
data/Timer/MPI/: 2223012_1_1.out  2223018_2_1.out  2223025_4_1.out  2223058_2_1.out  2223070_8_1.out  2223100_4_1.out  2223106_8_1.out  2223113_16_1.out  2223119_32_1.out  2227013_1_1_2.out  2227022_1_16_1.out  2227023_1_32_1.out  2230689_1_1_1.out  2230692_1_8_1.out  2230693_1_16_1.out  2230697_1_4_1.out  2230705_1_16_1.out  2233194_01_02_01.out  2233199_01_04_01.out  2233203_01_08_01.out  2233206_01_16_01.out  2233208_01_32_01.out  2233216_01_02_01.out  2233221_01_04_01.out  2233225_01_08_01.out  2233228_01_16_01.out  2233230_01_32_01.out  2233237_01_02_01.out  2233242_01_04_01.out  2233246_01_08_01.out  2233249_01_16_01.out  2233251_01_32_01.out  2234730_01_04_01.out  2234744_01_16_01.out  2234747_01_32_01.out  2234780_01_08_01.out  2234790_01_32_01.out  2234805_01_02_01.out  2234825_01_08_01.out  2250727_01_04_01.out  (+27 more)
data/Timer/MPI_OpenMP/: 2223019_02_16_02.out  2223021_2_4.out  2223023_2_16.out  2223024_2_32.out  2223026_4_2.out  2223027_4_4.out  2223028_4_8.out  2223034_8_4.out  2223035_8_8.out  2223037_8_16.out  2223041_16_4.out  2223044_16_16.out  2223045_16_32.out  2223048_32_4.out  2223059_2_2.out  2223061_2_8.out  2223063_2_32.out  2223065_4_2.out  2223068_4_16.out  2223071_8_2.out  2223073_8_8.out  2223074_8_16.out  2223075_8_32.out  2223077_16_2.out  2223078_16_4.out  2223079_16_8.out  2223080_16_16.out  2223081_16_32.out  2223084_32_4.out  2223085_32_8.out  2223087_32_32.out  2223096_2_4.out  2223097_2_8.out  2223103_4_8.out  2223104_4_16.out  2223108_8_4.out  2223112_8_32.out  2223114_16_2.out  2223117_16_16.out  2223118_16_32.out  (+123 more)
data/Timer/Nodes/: 2250859_04_08_04.out  2250880_08_08_04.out
data/Timer/OpenMP/: 2223014_01_02_16.out  2223017_1_32.out  2223053_1_2.out  2223054_1_4.out  2223089_1_2.out  2231657_1_1_2.out  2231658_1_1_4.out  2231660_1_1_16.out  2231661_1_1_32.out  2231663_1_1_2.out  2231664_1_1_4.out  2231665_1_1_8.out  2231666_1_1_16.out  2231667_1_1_32.out  2231669_1_1_2.out  2231670_1_1_4.out  2231671_1_1_8.out  2231672_1_1_16.out  2231673_1_1_32.out  2233189_01_01_02.out  2233190_01_01_04.out  2233191_01_01_08.out  2233192_01_01_16.out  2233193_01_01_32.out  2233210_01_01_02.out  2233212_01_01_04.out  2233213_01_01_08.out  2233214_01_01_16.out  2233215_01_01_32.out  2233232_01_01_02.out  2233233_01_01_04.out  2233234_01_01_08.out  2233235_01_01_16.out  2233236_01_01_32.out  2234712_01_01_04.out  2234718_01_01_32.out  2234751_01_01_02.out  2234759_01_01_32.out  2234801_01_01_16.out  2250717_01_01_02.out  (+7 more)
data/Timer/Optimization/: 2227012_1_1_1.out  2227018_1_1_1.out  2230701_1_1_1.out  2231720_1_1_1.out  2233188_01_01_01.out  2233209_01_01_01.out  2233231_01_01_01.out  2234708_01_01_01.out  2234792_01_01_01.out  2250716_01_01_01.out  2250800_01_01_01.out  2250884_01_01_01.out  output-2220378.out
data/Timer/Serial/: 2227019_1_2_1.out  2227020_1_4_1.out  2227021_1_8_1.out  2230690_1_2_1.out  2230691_1_4_1.out  2230694_1_32_1.out  2230695_1_1_1.out  2230696_1_2_1.out  2230698_1_8_1.out  2230699_1_16_1.out  2230700_1_32_1.out  2230702_1_2_1.out  2230703_1_4_1.out  2230704_1_8_1.out  2230706_1_32_1.out  output-2187917.out  output-2187975.out  output-2187977.out
inc/: Timer.hpp  allocate.h  cleanup.h  comp.h  force_compute.h  init.h  myMPI.hpp  output.h  structs.h  structs_prots.hpp  utilities.h  utils.h  verlet.h
src/: .verlet.c.swp  cleanup.c  comp.c  comp_omp.c  force_compute.c  init.c  main.c  main.cpp  main.py  mycomp.c  output.c  utilities.c  utils.c  verlet.c
src/.old/: ljmd.x
test/: Makefile  test_comp.cpp  test_force.cpp  test_init.cpp  test_utils.cpp  test_verlet.cpp
util/: utils.c
(+39 files in other folders)
